glx/testdata/invalid/assertion-quality-int-pointer/vocabularies/person-properties.glx
person_properties:
  given_name:
    label: "Given Name"
    value_type: string


